fix cookies
