# controllers/sellerController.js
@@ -35,42 +35,6 @@ exports.login_post = async (req, res) => {
     res.redirect('/seller');
 };
 
-exports.signup_get = async (req, res) => {
-    const error = req.session.error;
-    delete req.session.error;
-    res.render(path.resolve('./views/sellerPage/signup.ejs'), { err: error });
-};
-
-exports.signup_post = async (req, res) => {
-    const { firstName, lastName, email, password } = req.body
-
-    if (!firstName && !lastName && !email && !password) {
-        req.session.error = "Content empty!";
-        return res.redirect('/seller/signup');
-    }
-
-    let seller = await Seller.findOne({email})
-    let customer = await Customer.findOne({email})
-    let manager = await Manager.findOne({email})
-
-    if (seller || customer || manager) {
-        req.session.error = "Email taken!";
-        return res.redirect('/seller/signup');
-    }
-
-    const hashPsw = await bcrypt.hash(password, 12);
-
-    seller = new Seller({
-        firstName,
-        lastName,
-        email,
-        password: hashPsw,
-    });
-
-    await seller.save();
-    res.redirect('/seller/login');
-};
-
 exports.logout_post = async (req, res) => {
     req.session.destroy((err) => {
         if (err) throw err;
